--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.9.6",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
