--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-rating": "^2.0.5",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.5"
   },
