feat: 구인 공고 필터·모달 뷰 분리 및 선택 상태 zustand 스토어로 관리

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
       "@mocks/*": ["src/mocks/*"]
     }
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts", "src/store/.ts"]
 }
