--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
       "@mocks/*": ["src/mocks/*"]
     }
   },
-  "include": ["src", "vite.config.ts", "src/store/.ts"]
+  "include": ["src", "vite.config.ts", "src/store/.ts", "src/config/.tsx"]
 }
