--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "lucide": "^0.554.0",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
