--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.0",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
